Development Portal (2014-03-22 shi)
==============================
Heat map info
Fix footer with translations
Fixed translation links for easier addition
Stats (key figures) are now links
Reworded explanations for black bars
Cleaned up translation names for easier reference where
sections are not shown on site as main info, eg.

	_alt_		= alt states for images
	_tip_		= title / hover states
	
Otherwise, names follow their sections in CSS names or
may include the following

	_declare_	= declarations of sources and meanings
	_logo_		= contains logo image
	_icon_		= contains icon


Development Portal (2014-03-21 shi)
==============================
New branding reflected on site
Links updated
Beige alert over entire site
Colour coding tables


Country Tracker (2014-03-20 shi)
==============================
No more inline styles for base.html
Naming conventions tightened to reflect new changes
Ctrack divs now changed to Dportal where needed
Code refactoring throughout for flexible css customisation


Country Tracker (2014-03-19 shi)
==============================
CSS classes clean up
Fixed flag sizes to align height, not width


Country Tracker (2014-03-13 shi)
==============================
CSS now has comments for sections
Fixed alignment bug for bar charts


Country Tracker (2014-03-11 shi)
==============================
Alerts added to non-IATI publisher in listings
Declaration added to XML SAVi
Added declarations to table headers where needed
Changed tooltip hover states to reflect data displayed
Tightened up whitespace for whole site
Added scrollTop in footer
Added icon for declarations
Added reporting-org to donor activities


Country Tracker (2014-03-10 shi)
==============================
Added breadcrumbs
Changed footer to include License
Graphs now include percentages in legend
Added Spanish translation
Transactions renamed to Spend
Added currency to headers
Declared IATI or Non-IATI (CRS & Others)
Added Donor/Year/Total spend to Donor Spend header