@@ -22,11 +22,11 @@ i						{font-style:italics;}
 
 /*	Main wrappers for content & fixed background img
 	============================================= */
-.portal					{width:100%; min-height:100%; height:auto !important; height:100%; margin:0px 0px -40px 0px;} /* Needed for sticky footer */
+.portal					{width:100%; min-height:100%; height:auto !important; height:100%; margin:0px 0px -40px 0px;}	/* Needed for sticky footer */
 .main_wrap				{width:100%; min-width:1040px; padding:0px 0px 40px 0px; background-color: rgba(255,255,255,0.4);}
 #background_image	 	{width:100%; height:100%; position:fixed; top:0; left:0; z-index:-1; background-image:url('backgroundimage.jpg'); background-repeat:no-repeat; background-position:center center; -webkit-background-size:cover; -moz-background-size:cover; -o-background-size:cover; background-size:cover;}
-.overlay				{width:100%; height:100%; background-color:rgba(46, 41, 6, 0.6);} /* Overlay colour for background image */
-iati-activity			{margin-bottom:40px;} /* Fixes too-large bottom margin during only this instance */
+.overlay				{width:100%; height:100%; background-color:rgba(46, 41, 6, 0.6);}	/* Overlay colour for background image */
+iati-activity			{margin-bottom:40px;}	/* Fixes too-large bottom margin during only this instance */
 
 /*	Breadcrumbs
 	============================================= */
@@ -60,12 +60,12 @@ a.tongue:hover			{color:#fff;}
 .money_subtitle			{text-align:center; color:#ccc; font-size:14px; padding-bottom:20px;}
 .peak_space				{width:160px; display:inline-block; vertical-align:top;}
 .peak_wrap				{width:140px; display:inline-block; vertical-align:top;}
-.peak					{width:0; height:0; border-left:20px solid transparent; border-right:20px solid transparent;}
+.peak					{width:0; height:0; border-left:20px solid transparent; border-right:20px solid transparent;}	/* Triangles */
 .peak.donor				{border-top:20px solid #008FFF;}
 .peak.sector			{border-top:20px solid #00C475;}
 .barchart_wrap			{width:100px; height:10px; background-color:#000000;}
-.barchart.donor			{height:10px; background-color:#1E90FF;} /* Check #chunkmoney_row for more styling of bar */
-.barchart.sector		{height:10px; background-color:#00C475;} /* Check #chunkmoney_row for more styling of bar */
+.barchart.donor			{height:10px; background-color:#1E90FF;}	/* Check #chunkmoney_row for more styling of bar */
+.barchart.sector		{height:10px; background-color:#00C475;}	/* Check #chunkmoney_row for more styling of bar */
 a.view_all_money		{display:block; width:380px; background-color:rgba(0,14,32,0.7); color:#ccc; font-size:20px; text-align:center; padding:20px 0; border-radius:0 0 8px 8px; text-align:center;}
 a.view_all_money:hover	{background-color:rgba(0,14,32,0.9); color:#fff;}
 
@@ -101,7 +101,7 @@ a.view_all_projects:hover	{background-color:#0081FF;}
 .donors_icon_wrap			{width:330px; display:inline-block; vertical-align:bottom;}
 .donors_peak_wrap			{display:inline-block; vertical-align:top;}
 .donors_peak_space			{height:30px;}
-.donors_peak				{width:0; height:0; border-top:20px solid transparent; border-left:20px solid transparent; border-right:30px solid #008FFF; border-bottom:20px solid transparent;}
+.donors_peak				{width:0; height:0; border-top:20px solid transparent; border-left:20px solid transparent; border-right:30px solid #008FFF; border-bottom:20px solid transparent;}	/* Triangles */
 .donors_head_title_wrap		{width:480px; display:inline-block; vertical-align:top;}
 .donors_head_title			{width:400px; background-color:#008FFF; padding:20px 40px; text-align:center; color:#fff; font-size:42px;}
 .donors_head_declare		{width:480px; padding-top:10px; color:#ccc; font-size:14px; text-align:center;}
@@ -137,7 +137,7 @@ a.back_to_donor_list:hover		{background-color:#0081FF;}
 .sectors_icon_wrap			{width:330px; display:inline-block; vertical-align:bottom;}
 .sectors_peak_wrap			{display:inline-block; vertical-align:top;}
 .sectors_peak_space			{height:30px;}
-.sectors_peak				{width:0; height:0; border-top:20px solid transparent; border-left:20px solid transparent; border-right:30px solid #00C475; border-bottom:20px solid transparent;}
+.sectors_peak				{width:0; height:0; border-top:20px solid transparent; border-left:20px solid transparent; border-right:30px solid #00C475; border-bottom:20px solid transparent;}	/* Triangles */
 .sectors_head_title_wrap	{width:480px; display:inline-block; vertical-align:top;}
 .sectors_head_title			{width:400px; background-color:#00C475; padding:20px 40px; text-align:center; color:#fff; font-size:42px;}
 .sectors_head_declare		{width:480px; padding-top:10px; color:#ccc; font-size:14px; text-align:center;}
