@@ -21,25 +21,25 @@
 <span>{crumbname_{crumb3_view}}</span>
 
 #crumbname_main
-Home
+{crumbname_main_text}
 
 #crumbname_donors
-Donor List
+{crumbname_donors_text}
 
 #crumbname_donor_budgets
-Donor Budgets
+{crumbname_donor_budgets_text}
 	
 #crumbname_donor_transactions
-Donor Transactions
+{crumbname_donor_transactions_text}
 
 #crumbname_donor_activities
-Donor Activities
+{crumbname_donor_activities_text}
 
 #crumbname_sectors
-Sector List
+{crumbname_sectors_text}
 
 #crumbname_act
-Activity
+{crumbname_act_text}
 
 #alerts
 {alert_no_iati}
