@@ -46,6 +46,27 @@ Back to Development Portal
 #back_text
 Back to Development Portal
 
+#crumbname_main_text
+Home
+
+#crumbname_donors_text
+Donor List
+
+#crumbname_donor_budgets_text
+Donor Budgets
+	
+#crumbname_donor_transactions_text
+Donor Transactions
+
+#crumbname_donor_activities_text
+Donor Activities
+
+#crumbname_sectors_text
+Sector List
+
+#crumbname_act_text
+Activity
+
 #about_text
 Development Portal is a simple user interface for searching and browsing all IATI data relating to a specific country that can be easily hosted by
 
