@@ -46,6 +46,27 @@ Retour à Portail de Développement
 #back_text 
 Retour à Portail de Développement
 
+#crumbname_main_text 
+Maison 
+
+#crumbname_donors_text 
+Liste des Donateurs 
+
+#crumbname_donor_budgets_text 
+Budgets des Bailleurs de fonds 
+
+#crumbname_donor_transactions_text 
+Transactions Donateurs 
+
+#crumbname_donor_activities_text 
+Activités des Donneurs 
+
+#crumbname_sectors_text 
+Liste de Secteur 
+
+#crumbname_act_text 
+Activité
+
 #about_text 
 Portail de Développement vise à être une interface utilisateur simple pour rechercher et parcourir toutes les données de IATI concernant un pays spécifique qui peut être facilement hébergé par 
 
