@@ -46,6 +46,27 @@ Volver a la Portal de Desarrollo
 #back_text
 Volver a la Portal de Desarrollo
 
+#crumbname_main_text 
+Casa 
+
+#crumbname_donors_text 
+Lista de Donantes 
+
+#crumbname_donor_budgets_text 
+Presupuestos de los donantes 
+
+#crumbname_donor_transactions_text 
+Transacciones de los donantes 
+
+#crumbname_donor_activities_text 
+Donantes Actividades 
+
+#crumbname_sectors_text 
+Lista Sector 
+
+#crumbname_act_text 
+Actividad
+
 #about_text
 Portal de Desarrollo pretende ser una interfaz de usuario sencilla para buscar y explorar todos los datos de la IATI relativos a un país específico que puede ser fácilmente organizado por
 
